- Fix bug #60155 (pdo_mysql.default_socket ignored).